logs/django-chunky.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chunky'...
Compiling './lib/python3.5/site-packages/chunky/decorators.py'...
***   File "./lib/python3.5/site-packages/chunky/decorators.py", line 47
    except APIError, apie:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chunky/migrations'...
Listing './lib/python3.5/site-packages/chunky/static'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/lang'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/clipboard'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/clipboard/dialogs'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/dialog'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/fakeobjects'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/fakeobjects/images'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/link'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/link/dialogs'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/plugins/link/images'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/skins'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/skins/moono'...
Listing './lib/python3.5/site-packages/chunky/static/ckeditor/skins/moono/images'...
Listing './lib/python3.5/site-packages/chunky/static/js'...
Listing './lib/python3.5/site-packages/chunky/templates'...
Listing './lib/python3.5/site-packages/chunky/templatetags'...
Compiling './lib/python3.5/site-packages/chunky/views.py'...
***   File "./lib/python3.5/site-packages/chunky/views.py", line 17
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_chunky-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
